feature: Phase 4 - Java 21 + virtual-thread BatchRunner, pre/post batch artifacts
Co-Authored-By: sachet.agarwal <sachet.agarwal@windsurf.com>